--- a/packages/utils/sms-tool/Makefile
+++ b/packages/utils/sms-tool/Makefile
@@ -1,25 +1,34 @@
+# 2017 - 2021 Cezary Jackiewicz <cezary@eko.one.pl>
+# 2014 lovewilliam <ztong@vt.edu>
+# sms tool for various of 3g/4g modem
+#
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=sms-tool
 PKG_RELEASE:=1
 
+PKG_SOURCE_URL:=https://github.com/R5CA/sms_tool
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/obsy/sms_tool.git
-PKG_SOURCE_DATE:=2024-07-25
+PKG_SOURCE_DATE:=2023-09-21
 PKG_SOURCE_VERSION:=fce2b931c8d749c28b8281363950e963c98324eb
-PKG_MIRROR_HASH:=1635ace8ba74fe81339c9dfcfc5ca407f66e50af880834804d4e8dfa7337f991
+PKG_MIRROR_HASH:=skip
+
+PKG_MAINTAINER:=Andrey Butirsky <butirsky@gmail.com>
+PKG_LICENSE:=Apache-2.0
+PKG_LICENSE_FILES:=LICENSE-2.0.txt
 
 include $(INCLUDE_DIR)/package.mk
 
 define Package/sms-tool
   SECTION:=utils
   CATEGORY:=Utilities
-  TITLE:=sms tool
-  URL:=https://github.com/obsy/sms_tool
+  TITLE:=SMS tool for 3G/4G modems
+  URL:=https://github.com/R5CA/sms_tool
 endef
 
 define Package/sms-tool/description
-	SMS Tool for 3G/4G/5G modem
+  SMS Tool for 3G/4G modem
 endef
 
 define Package/sms-tool/install
